--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 body {
-  background-color: black;
+  background-color: #000000;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95dvh;
+}
+
+.Envelope {
+  outline: 4px solid red;
 }/*# sourceMappingURL=index.css.map */
