--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,49 @@ body {
 }
 
 .Envelope {
-  .
-  outline: 4px solid red;
+  position: relative;
+  scale: 1;
+  transition: scale 0.5s ease-in-out;
+
+  .Back {
+    z-index: 0;
+  }
+  .Body,
+  .Lid {
+    z-index: 2;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: scaleY(1);
+    transform-origin: top;
+    transition: transform 0.25s ease-in-out;
+  }
+  .Lid.open {
+    transform: scaleY(-1);
+  }
+  .Inside {
+    z-index: 1;
+    width: 100%;
+    bottom: 25%;
+    left: 0%;
+    position: absolute;
+    transition: bottom 1s ease, scale 1s ease;
+    scale: 0.8;
+    outline: 2px solid red;
+  }
+  &.open {
+    scale: 1.2;
+    .Lid {
+      z-index: 0;
+    }
+    .Inside {
+      scale: 1;
+      bottom: 150%;
+    }
+  }
+}
+
+.Paper {
+  background-color: white;
+  color: black;
 }
