--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,14 @@ body {
   align-items: center;
   justify-content: center;
   height: 95dvh;
+  transition: background-color 1s;
+
+  &:has(.LandingStage.open) {
+    background-color: rgb(65, 124, 150);
+  }
 
   &:has(.Stage1) {
-    overflow-x: hidden;
-    background-color: cyan;
+    overflow: hidden;
   }
 }
 
@@ -17,6 +21,7 @@ body {
   position: relative;
   scale: 1.25;
   transition: scale 0.5s ease-in-out, translate 1s;
+  box-shadow: 0.05em 0.06em 0.5em 0em rgba(0, 0, 0, 0.5);
 
   .Back {
     z-index: 0;
@@ -66,7 +71,7 @@ body {
   cursor: pointer;
   scale: 1;
   transition: scale 0.25s;
-  box-shadow: 4px 3px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0.05em 0.06em 0.5em 0em rgba(0, 0, 0, 0.5);
   &:hover {
     scale: 0.975;
   }
@@ -91,13 +96,31 @@ body {
 }
 
 .Stage1 {
-  width: 95dvw;
-  height: 95dvh;
-  .backgrounds {
-    position: relative;
-    width: 100%;
-    * {
-      position: absolute;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
+  .Page {
+    scroll-snap-align: center;
+    padding: 1em;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    & > *:not(.Backgrounds) {
+    }
+    #Page1 {
+    }
+    #Page2 {
+    }
+    #Page3 {
+    }
+    #Page4 {
+    }
+    #Page5 {
+    }
+    #Page6 {
     }
   }
 }
