--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ body:has(.Stage1) {
 .Stage1 {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 100vh;
 }
 .Stage1 .Page {
@@ -102,4 +103,26 @@ body:has(.Stage1) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+.Stage1 .Page .Backgrounds {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+.Stage1 .Page .Backgrounds * {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 100%;
+}
+.Stage1 .Page > *:not(.Backgrounds) {
+  z-index: 10;
+}
+.Stage1 .Page#Page1 {
+  background-color: cyan;
+  outline: 4px solid red;
 }/*# sourceMappingURL=index.css.map */
