--- a/src/index.scss
+++ b/src/index.scss
@@ -98,6 +98,7 @@ body {
 .Stage1 {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 100vh;
   .Page {
     scroll-snap-align: center;
@@ -108,19 +109,37 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
+    .Backgrounds {
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      * {
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+        width: 100%;
+      }
+    }
     & > *:not(.Backgrounds) {
+      z-index: 10;
     }
-    #Page1 {
+    &#Page1 {
+      background-color: cyan;
+      outline: 4px solid red;
     }
-    #Page2 {
+    &#Page2 {
     }
-    #Page3 {
+    &#Page3 {
     }
-    #Page4 {
+    &#Page4 {
     }
-    #Page5 {
+    &#Page5 {
     }
-    #Page6 {
+    &#Page6 {
     }
   }
 }
