--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,30 @@
+@mixin forScreens($min) {
+  @if $min == 1024px {
+    @media (min-width: 1024px) {
+      @content;
+    }
+  }
+  @if $min == 768px {
+    @media (min-width: 768px) and (max-width: 1024px) {
+      @content;
+    }
+  }
+  @if $min == 640px {
+    @media (max-width: 768px) {
+      @content;
+    }
+  }
+}
+
+$p: 640px;
+$t: 768px;
+$d: 1024px;
+
+@font-face {
+  font-family: "Merienda";
+  src: url("./Assets/Fonts/Merienda-VariableFont_wght.ttf");
+}
+
 body {
   background-color: #000000;
   color: white;
@@ -7,6 +34,9 @@ body {
   justify-content: center;
   height: 95dvh;
   transition: background-color 1s;
+  * {
+    font-family: "Merienda", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
 
   &:has(.LandingStage.open) {
     background-color: rgb(65, 124, 150);
@@ -112,7 +142,7 @@ body {
     position: relative;
     .Backgrounds {
       position: absolute;
-      top: 0%;
+      top: calc(0% + 2em);
       left: 0%;
       width: 100%;
       height: 100vh;
@@ -122,14 +152,23 @@ body {
         bottom: 0%;
         left: 0%;
         width: 100%;
+        @include forScreens($p) {
+          width: 200%;
+          left: -50%;
+        }
       }
     }
     & > *:not(.Backgrounds) {
       z-index: 10;
+      font-size: 2em;
+      background-image: url("./Assets/Backgrounds/paper.png");
+      background-size: cover;
+      color: rgb(0, 0, 0);
+      padding: 2em;
+      box-shadow: 0.3em 0.15em 0.4em 0em rgba(0, 0, 0, 0.5);
     }
     &#Page1 {
-      background-color: cyan;
-      outline: 4px solid red;
+      background-color: rgb(195, 255, 255);
     }
     &#Page2 {
     }
@@ -140,6 +179,17 @@ body {
     &#Page5 {
     }
     &#Page6 {
+    }
+    &#FormPage {
+      button {
+        padding: 1em 3em;
+        margin: 2em;
+        font-size: 1.5em;
+      }
+      textarea {
+        width: 90vw;
+        height: 20vh;
+      }
     }
   }
 }
