--- a/src/index.scss
+++ b/src/index.scss
@@ -178,10 +178,13 @@ body {
       background-color: rgb(195, 255, 255);
     }
     &#Page2 {
+      background-color: rgb(255, 255, 197);
     }
     &#Page3 {
+      background-color: rgb(255, 223, 228);
     }
     &#Page4 {
+      background-color: rgb(207, 255, 207);
     }
     &#Page5 {
     }
